--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(0, 0, 73);
 }
 
 .d-bloc .a-btn:hover,
@@ -742,6 +742,9 @@ h4 {
 }
 
 .white {
+    color: #000049!important;
+}
+.text-white{
     color: #FFFFFF!important;
 }
 
@@ -758,7 +761,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(98,97,98,0.8);
     padding: 40px 40px 40px 40px;
 }
 
@@ -780,12 +783,17 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #000049!important;
+
+}
+
+.tc-yellow{
+    color: #FDF822FF!important;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000049!important;
 }
 
 
@@ -825,6 +833,7 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/la-chouette-agence-banniere.jpg");
+
 }
 
 .bg-presentation {
